--- a/public/css/app.css
+++ b/public/css/app.css
@@ -17463,6 +17463,9 @@ select {
 .ml-auto {
   margin-left: auto;
 }
+.mb-1 {
+  margin-bottom: 0.25rem;
+}
 .mr-4 {
   margin-right: 1rem;
 }
@@ -17489,9 +17492,6 @@ select {
 }
 .mb-0 {
   margin-bottom: 0px;
-}
-.mb-1 {
-  margin-bottom: 0.25rem;
 }
 .block {
   display: block;
@@ -17957,6 +17957,10 @@ select {
   -o-object-fit: cover;
      object-fit: cover;
 }
+.object-center {
+  -o-object-position: center;
+     object-position: center;
+}
 .p-2 {
   padding: 0.5rem;
 }
@@ -18063,11 +18067,11 @@ select {
 .pt-8 {
   padding-top: 2rem;
 }
-.pr-16 {
-  padding-right: 4rem;
-}
 .pl-2 {
   padding-left: 0.5rem;
+}
+.pr-16 {
+  padding-right: 4rem;
 }
 .text-left {
   text-align: left;
